Made file selection in Assembler and VMTranslator more intuitive